--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon --exec babel-node -r dotenv/config src/index.js",
     "build": "babel src -d dist",
     "serve": "node -r dotenv/config dist/index.js",
-    "test": "ENV=test jest --no-cache",
+    "test": "jest --no-cache",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
